tests/ui/cve_2025_48755/cve_2025_48755.normal.stderr
error: public function `new` allocates a pointer that may be zero-sized, which is an undefined behavior
  --> tests/ui/cve_2025_48755/cve_2025_48755.rs:23:19
   |
LL |     pub fn new(sz_u64: usize) -> Self {
   |                ------ size passed in here
...
LL |             ptr = alloc_zeroed(layout);
   |                   ^^^^^^^^^^^^^^^^^^^^ pointer created here
   |
   = note: See https://doc.rust-lang.org/std/alloc/fn.alloc_zeroed.html and https://doc.rust-lang.org/std/alloc/trait.GlobalAlloc.html#method.alloc_zeroed
   = note: `#[deny(rpl::alloc_maybe_zero)]` on by default

error: aborting due to 1 previous error

